--- a/core/build.gradle
+++ b/core/build.gradle
@@ -2,10 +2,25 @@
 eclipse.project.name = appName + '-core'
 
 dependencies {
+
+  testImplementation 'org.junit.jupiter:junit-jupiter:5.10.0'
+
+  
   api "com.badlogicgames.gdx:gdx:$gdxVersion"
   implementation group: 'org.yaml', name: 'snakeyaml', version: '1.8'
+
+
 
   if(enableGraalNative == 'true') {
     implementation "io.github.berstanio:gdx-svmhelper-annotations:$graalHelperVersion"
   }
+}
+
+repositories {
+  mavenCentral()
+}
+
+
+test{
+  useJUnitPlatform()
 }
