--- a/.github/workflows/gradle-release.yml
+++ b/.github/workflows/gradle-release.yml
@@ -96,7 +96,7 @@ jobs:
       id: projectVersion  
     
     - name: Check version
-      run: echo ${{steps.GetProjectVersion.id}  
+      run: echo ${{steps.GetProjectVersion.id}}
       
     - name: clean gradle project 
       run: ./gradlew clean
