--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-	"java.configuration.updateBuildConfiguration": "interactive",
+	"java.configuration.updateBuildConfiguration": "automatic",
 	"java.jdt.ls.protobufSupport.enabled": true,
 	"java.import.generatesMetadataFilesAtProjectRoot": true
 }
