--- a/.github/workflows/gradle-release.yml
+++ b/.github/workflows/gradle-release.yml
@@ -19,7 +19,7 @@ on:
 
 jobs:
   build:
-
+    name: Create Release
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -43,21 +43,20 @@ jobs:
     - name: Build with Gradle Wrapper
       run: ./gradlew build
 
-    # NOTE: The Gradle Wrapper is the default and recommended way to run Gradle (https://docs.gradle.org/current/userguide/gradle_wrapper.html).
-    # If your project does not have the Gradle Wrapper configured, you can use the following configuration to run Gradle with a specified version.
-    #
-    # - name: Setup Gradle
-    #   uses: gradle/actions/setup-gradle@af1da67850ed9a4cedd57bfd976089dd991e2582 # v4.0.0
-    #   with:
-    #     gradle-version: '8.9'
-    #
-    # - name: Build with Gradle 8.9
-    #   run: gradle build
-    
-    
+            
+    - name: clean gradle project 
+      run: ./gradlew clean
       
+    - name: Make jar
+      run: ./gradlew lwjgl:jar
+      
+    - name: Make Release
+      uses: actions/create-release@v4
+      id: Create_release
+      with:
+        name: Release ${{github.ref_name}}
+        artifacts: "lwjgl3/libs/CampusTycoon-${{github.ref_name}}.jar"
         
-
   dependency-submission:
 
     runs-on: ubuntu-latest
@@ -76,43 +75,6 @@ jobs:
     # See: https://github.com/gradle/actions/blob/main/dependency-submission/README.md
     - name: Generate and submit dependency graph
       uses: gradle/actions/dependency-submission@af1da67850ed9a4cedd57bfd976089dd991e2582 # v4.0.0
-
-  build-release:
-    runs-on: ubuntu-latest
-    permissions:
-      contents: write
-
-    steps:
-    - uses: actions/checkout@v4
-    - name: Set up JDK 17
-      uses: actions/setup-java@v4
-      with:
-        java-version: '17'
-        distribution: 'temurin'
-
-    # Configure Gradle for optimal use in GitHub Actions, including caching of downloaded dependencies.
-    # See: https://github.com/gradle/actions/blob/main/setup-gradle/README.md
-    - name: Setup Gradle
-      uses: gradle/actions/setup-gradle@af1da67850ed9a4cedd57bfd976089dd991e2582 # v4.0.0
-
-    - name: Make gradlew executable
-      run: chmod +x ./gradlew
-
-    - name: Build with Gradle Wrapper
-      run: ./gradlew build
-
-#    - name: GetProjectVersion
-#      run: ./gradlew properties >> $GITHUB_OUTPUT
-#      id: projectVersion  
-    
-#    - name: Check version
-#     run: echo ${{steps.GetProjectVersion.id}}
-      
-    - name: clean gradle project 
-      run: ./gradlew clean
-      
-    - name: Make jar
-      run: ./gradlew lwjgl:jar
 
     
       
