--- a/.github/workflows/gradle-release.yml
+++ b/.github/workflows/gradle-release.yml
@@ -25,7 +25,7 @@ jobs:
       contents: read
 
     steps:
-    - uses: actions/checkout@v4
+    - uses: actions/checkout@v3
     - name: Set up JDK 17
       uses: actions/setup-java@v4
       with:
@@ -43,7 +43,10 @@ jobs:
     - name: Build with Gradle Wrapper
       run: ./gradlew build
 
-            
+      
+    - name: Build with Gradle Wrapper
+      run: ./gradlew core:test
+
     - name: clean gradle project 
       run: ./gradlew clean
       
