--- a/.github/workflows/gradle-release.yml
+++ b/.github/workflows/gradle-release.yml
@@ -22,7 +22,7 @@ jobs:
     name: Create Release
     runs-on: ubuntu-latest
     permissions:
-      contents: read
+      contents: write
 
     steps:
     - uses: actions/checkout@v3
@@ -44,7 +44,7 @@ jobs:
       run: ./gradlew build
 
       
-    - name: Build with Gradle Wrapper
+    - name: testing with unit tests
       run: ./gradlew core:test
 
     - name: clean gradle project 
