--- a/.github/workflows/gradle-release.yml
+++ b/.github/workflows/gradle-release.yml
@@ -52,12 +52,15 @@ jobs:
       
     - name: Make jar
       run: ./gradlew lwjgl:jar
+    
+    - name: list Directory
+      run: ls 
       
     - name: release
       uses: softprops/action-gh-release@v1
       with:
         files: |
-          lwjgl3/libs/CampusTycoon-1.0.0.jar
+          lwjgl3/build/libs/CampusTycoon-1.0.0.jar
       env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       
