--- a/.github/workflows/gradle-release.yml
+++ b/.github/workflows/gradle-release.yml
@@ -55,6 +55,12 @@ jobs:
     
     - name: list Directory
       run: ls "lwjgl3/build/libs/"
+
+    - name: Upload jar to actions artifacts
+      uses: actions/upload-artifact@v3.1.1
+      with:
+        name: CampusTycoon-${{github.ref_name}}.jar
+        path: lwjgl3/build/libs/
       
     - name: release
       uses: softprops/action-gh-release@v1
