--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -10,9 +10,11 @@ name: Java CI with Gradle
 on:
   push:
     branches: [ "main" ]
+    tags: [ '*.*.*' ]
   pull_request:
     branches: [ "main" ]
 
+    
 jobs:
   build:
 
