--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -56,7 +56,26 @@ jobs:
       with:
         name: CampusTycoon-${{github.ref_name}}.jar
         path: lwjgl3/build/libs/
+  
+  release:
+      runs-on: ubuntu-latest
+      needs: [ "build" ]
+      permissions:
+        contents: write
       
+      if: startsWith(github.ref, 'refs/tags/’)
+      steps:
+      - name: Download a Build Artifact
+        uses: actions/download-artifact@v3.0.1
+        with:
+          name: CampusTycoon-${{github.ref_name}}.jar
+        
+      - name: release
+        uses: softprops/action-gh-release@v1
+        with:
+          files: CampusTycoon-${{github.ref_name}}.jar
+        env:
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   dependency-submission:
 
