--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -62,8 +62,10 @@ jobs:
       needs: [ "build" ]
       permissions:
         contents: write
-      
-      if: startsWith(github.ref, 'refs/tags/’)
+
+      #Only runs when a tag is released
+      if: github.ref_type == 'tag'
+    
       steps:
       - name: Download a Build Artifact
         uses: actions/download-artifact@v3.0.1
@@ -76,6 +78,8 @@ jobs:
           files: CampusTycoon-${{github.ref_name}}.jar
         env:
             GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+
 
   dependency-submission:
 
