--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -67,8 +67,8 @@ jobs:
       if: github.ref_type == 'tag'
     
       steps:
-      - name: Download a Build Artifact
-        uses: actions/download-artifact@v3.0.1
+      - name: Download a Build Artifact #Must USE THE SAME VERSION AS UPLOAD
+        uses: actions/download-artifact@v4
         with:
           name: CampusTycoon-1.0.0.jar 
         
