--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -61,7 +61,11 @@ jobs:
         path: lwjgl3/build/libs/
   
   release:
-      runs-on: ubuntu-latest
+      strategy:
+        matrix:
+          os: [ubuntu-24.04, windows-2022, macos-14]
+    
+      runs-on: ${{ matrix.os }}
       needs: [ "build" ]
       permissions:
         contents: write
