--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -19,7 +19,7 @@ jobs:
   build:
     strategy:
       matrix:
-        os: [ubuntu-24.04, windows-2022, macos-14]
+        os: [ubuntu-24.04, windows-2025, macos-14]
     
     runs-on: ${{ matrix.os }}
     permissions:
@@ -126,16 +126,45 @@ jobs:
             GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
 
+  jacoco-report:
+    runs-on: ubuntu-24.04
+    permissions:
+      contents: write
+    steps:
+    
+      - uses: actions/checkout@v4
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          java-version: '17'
+          distribution: 'temurin'
 
-      
-      
+        
+      - name: Make gradlew executable
+        run: chmod +x ./gradlew
+
+          
+      - name: Setup Gradle
+        uses: gradle/actions/setup-gradle@v4
+        with:
+          gradle-version: 7.5
+          gradle-home-cache-cleanup: true
+          cache-read-only: false
+        
+
+      - name: Build with Gradle Wrapper 
+        run: ./gradlew headless:jacocoTestReport
+
+      - name: Upload JaCoCo coverage report as a workflow artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: jacoco-report
+          path: headless/build/reports/jacoco/test/html
         
 
 
-
   dependency-submission:
-
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     permissions:
       contents: write
 
