--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -72,58 +72,19 @@ jobs:
     
       steps:
 
-#Windows      
-      - name: Download a Build Artifact Windows #Must USE THE SAME VERSION AS UPLOAD
-        uses: actions/download-artifact@v4
-        with:
-          name: CampusTycoon-${{github.ref_name}}-windows-2022.jar
-
-      - name: Rename to Windows
-        run: mv CampusTycoon-${{github.ref_name}}.jar CampusTycoon-${{github.ref_name}}-windows.jar
-
-      - name: Upload release Windows
-        uses: softprops/action-gh-release@v1
-        with:
-          files: CampusTycoon-${{github.ref_name}}-windows.jar
-        env:
-            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-#Linux
-      - name: Download a Build Artifact Linux #Must USE THE SAME VERSION AS UPLOAD
+      - name: Download a Build Artifact  #Must USE THE SAME VERSION AS UPLOAD
         uses: actions/download-artifact@v4
         with:
           name: CampusTycoon-${{github.ref_name}}-ubuntu-24.04.jar
 
-      - name: Rename to Linux
-        run: mv CampusTycoon-${{github.ref_name}}.jar CampusTycoon-${{github.ref_name}}-linux.jar
-
       - name: Upload release Linux
         uses: softprops/action-gh-release@v1
         with:
-          files: CampusTycoon-${{github.ref_name}}-linux.jar
+          files: CampusTycoon-${{github.ref_name}}.jar
         env:
             GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-#Macos        
-      - name: Download a Build Artifact Macos #Must USE THE SAME VERSION AS UPLOAD
-        uses: actions/download-artifact@v4
-        with:
-          name: CampusTycoon-${{github.ref_name}}-macos-14.jar
 
-      - name: Rename to Macos
-        run: mv CampusTycoon-${{github.ref_name}}.jar CampusTycoon-${{github.ref_name}}-macos.jar
-
-
-      - name: Ubuntu list release files
-        run: ls 
-
-        
-      - name: Upload release Macos
-        uses: softprops/action-gh-release@v1
-        with:
-          files: CampusTycoon-${{github.ref_name}}-macos.jar
-        env:
-            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
 
   jacoco-report:
