--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -114,7 +114,7 @@ jobs:
         
 
       - name: Build with Gradle Wrapper 
-        run: ./gradlew headless:jacocoTestReport
+        run: ./gradlew clean build jacocoTestReport  --i
 
       - name: Upload JaCoCo coverage report as a workflow artifact
         uses: actions/upload-artifact@v4
