--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -7,6 +7,8 @@
 
 name: Java CI with Gradle
 
+
+#Builds on new tag releases,pushs to main or pull requests
 on:
   push:
     branches: [ "main" ]
@@ -16,6 +18,7 @@ on:
 
     
 jobs:
+#Matrix operating systems being used
   build:
     strategy:
       matrix:
@@ -123,21 +126,25 @@ jobs:
           path: headless/build/reports/jacoco/test/html
         
 
-
   dependency-submission:
-    runs-on: ubuntu-24.04
-    permissions:
-      contents: write
-
+    runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
-    - name: Set up JDK 17
+    - name: Checkout sources
+      uses: actions/checkout@v4
+    - name: Setup Java
       uses: actions/setup-java@v4
       with:
-        java-version: '17'
         distribution: 'temurin'
-
+        java-version: 17
+    
     # Generates and submits a dependency graph, enabling Dependabot Alerts for all project dependencies.
     # See: https://github.com/gradle/actions/blob/main/dependency-submission/README.md
     - name: Generate and submit dependency graph
-      uses: gradle/actions/dependency-submission@af1da67850ed9a4cedd57bfd976089dd991e2582 # v4.0.0
+      uses: gradle/actions/dependency-submission@v4
+      with:
+          gradle-version: 7.5
+          gradle-home-cache-cleanup: true
+          cache-read-only: false
+        
+
+
