--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -127,7 +127,9 @@ jobs:
         
 
   dependency-submission:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
+    permissions:
+      contents: write
     steps:
     - name: Checkout sources
       uses: actions/checkout@v4
@@ -141,6 +143,10 @@ jobs:
     # See: https://github.com/gradle/actions/blob/main/dependency-submission/README.md
     - name: Generate and submit dependency graph
       uses: gradle/actions/dependency-submission@v4
+      with:
+          gradle-version: 7.5
+          gradle-home-cache-cleanup: true
+          cache-read-only: false
         
 
 
