--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -142,11 +142,9 @@ jobs:
     # Generates and submits a dependency graph, enabling Dependabot Alerts for all project dependencies.
     # See: https://github.com/gradle/actions/blob/main/dependency-submission/README.md
     - name: Generate and submit dependency graph
-      uses: gradle/actions/dependency-submission@v4
-      with:
-          gradle-version: 7.5
-          gradle-home-cache-cleanup: true
-          cache-read-only: false
+      uses: gradle/actions/dependency-submission@af1da67850ed9a4cedd57bfd976089dd991e2582 # v4.0.0
+        
+
         
 
 
