Added testing back to core to test screens

--- a/core/build.gradle
+++ b/core/build.gradle
@@ -5,7 +5,15 @@ dependencies {
   api "com.badlogicgames.gdx:gdx:$gdxVersion"
   implementation group: 'org.yaml', name: 'snakeyaml', version: '2.3'
 
+  testImplementation platform('org.junit:junit-bom:5.10.0')
+  testImplementation 'org.junit.jupiter:junit-jupiter'
+  testImplementation 'org.mockito:mockito-core:5.11.0'
+
   if(enableGraalNative == 'true') {
     implementation "io.github.berstanio:gdx-svmhelper-annotations:$graalHelperVersion"
   }
+}
+
+test{
+  useJUnitPlatform()
 }
