--- a/assets/event.yml
+++ b/assets/event.yml
@@ -2,7 +2,7 @@
 eventList: [event1,event2,event3,event4,event5]
 #satisfaction,Cost
 event1:
-  - Description: "You create a new cafe, you may gain satisfaciton, but is it work the cost? \nAccept 5000, neutral 0, reject 0"
+  - Description: "You create a new cafe,\n you may gain satisfaciton, but is it work the cost? \nAccept 5000, neutral 0, reject 0"
   #what happens if you accept
   - acceptGain: 300
   - acceptCost: 5000
