--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -61,7 +61,9 @@ jobs:
       
     - name: Build Jar for artifacts
       run: ./gradlew jar
-      
+
+    - if: github.event_name != 'pull_request'
+    
     - name: Upload jar to actions artifacts
       uses: actions/upload-artifact@v4
       with:
